--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ build:
   stage: build
   image: golang:1.23-alpine
   before_script:
-    - apk add --no-cache wget git
+    - apk add --no-cache wget git libc6-compat libstdc++
     - wget -q https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz
     - tar -xzf hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz
     - chmod +x hugo
