--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,7 @@ deploy:
     - chmod 600 ~/.ssh/deploy_key
     - ssh-keyscan -p $DEPLOY_SSH_PORT -H $DEPLOY_HOST >> ~/.ssh/known_hosts
   script:
+    - ssh -i ~/.ssh/deploy_key -p $DEPLOY_SSH_PORT $DEPLOY_USER@$DEPLOY_HOST "sudo chown -R $DEPLOY_USER:$DEPLOY_USER $DEPLOY_PATH"
     - rsync -avz --delete -e "ssh -i ~/.ssh/deploy_key -p $DEPLOY_SSH_PORT -o StrictHostKeyChecking=no" public/ $DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH
     - ssh -i ~/.ssh/deploy_key -p $DEPLOY_SSH_PORT $DEPLOY_USER@$DEPLOY_HOST "sudo chown -R www-data:www-data $DEPLOY_PATH"
   after_script:
