testing website compression for faster loading

--- a/hugo.toml
+++ b/hugo.toml
@@ -241,6 +241,11 @@ defaultContentLanguageInSubdir = true
 # Build settings
 [build]
   writeStats = true
+  noJSConfigInAssets = false
+
+# Asset pipeline
+[params]
+  fingerprintAssets = true
 
 [minify]
   disableCSS = false
