--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,7 +38,8 @@ build:
   stage: build
   image: golang:1.23-alpine
   before_script:
-    - apk add --no-cache wget git libc6-compat libstdc++ libwebp-tools
+    - apk add --no-cache wget git libc6-compat libstdc++ libwebp-tools npm
+    - npm install -g svgo
     - wget -q https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz
     - tar -xzf hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz
     - chmod +x hugo
@@ -46,10 +47,14 @@ build:
     - /usr/local/bin/hugo version
   script:
     - /usr/local/bin/hugo --minify --gc
+    - echo "Optimizing SVG files..."
+    - find public -name "*.svg" -type f -exec svgo --multipass --quiet {} \;
     - echo "Converting PNG images to WebP..."
-    - find public -name "*.png" -type f | while read png; do webp="${png%.png}.webp"; cwebp -q 90 "$png" -o "$webp" && rm "$png"; done
-    - echo "Updating HTML references from .png to .webp..."
-    - find public -name "*.html" -type f -exec sed -i 's/\.png/\.webp/g' {} +
+    - find public -name "*.png" -type f | while read png; do webp="${png%.png}.webp"; cwebp -q 82 "$png" -o "$webp" && rm "$png"; done
+    - echo "Converting JPG/JPEG images to WebP..."
+    - find public \( -name "*.jpg" -o -name "*.jpeg" \) -type f | while read jpg; do webp="${jpg%.*}.webp"; cwebp -q 82 "$jpg" -o "$webp" && rm "$jpg"; done
+    - echo "Updating HTML references from .png/.jpg/.jpeg to .webp..."
+    - find public -name "*.html" -type f -exec sed -i -e 's/\.png/\.webp/g' -e 's/\.jpg/\.webp/g' -e 's/\.jpeg/\.webp/g' {} +
   artifacts:
     paths:
       - public/
