--- a/hugo.toml
+++ b/hugo.toml
@@ -4,6 +4,23 @@ canonifyURLs = false
 defaultContentLanguage = 'en'
 defaultContentLanguageInSubdir = true
 
+
+
+#User Editable Content
+
+# Poll configuration
+  [params.poll]
+    enabled = true  # Set to true to enable the poll
+    pollId = "2"  # Poll ID from your backend system
+
+# DO NOT EDIT BELOW THIS LINE
+
+# Use update_banner.sh to update banner message
+  [params.banner]
+    enabled = true  # Set to true to display the banner
+    dismissible = true  # Allow users to dismiss the banner
+    id = "banner-2"  # Unique ID for localStorage (increment number (eg 1 > 2 > 3) to display new banner)
+
 # Multilingual Configuration
 [languages]
   [languages.en]
@@ -122,16 +139,7 @@ defaultContentLanguageInSubdir = true
   gitlabRepo = "stormycloud-group/i-2-p-www-v-2"
   gitlabBranch = "main"
 
-  # Site-wide banner configuration
-  [params.banner]
-    enabled = true  # Set to true to display the banner
-    dismissible = true  # Allow users to dismiss the banner
-    id = "banner-1"  # Unique ID for localStorage (change to show new banner)
 
-  # Poll configuration
-  [params.poll]
-    enabled = true  # Set to true to enable the poll
-    pollId = "2"  # Poll ID from your backend system
 
   # Asset pipeline
   fingerprintAssets = true
