WIP: unit tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,7 +117,7 @@ jobs:
   # =================================================================================================
   
   deploy-cloudflare:
-    needs: [build, security-scan, codeql, lighthouse]
+    needs: [build, codeql, lighthouse]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     environment:
