--- a/.gitignore
+++ b/.gitignore
@@ -40,10 +40,12 @@ Temporary Items
 .vscode/
 .idea/
 
-# Python cache (from old i2p2www)
+# Python cache
 __pycache__/
 *.pyc
 *.pyo
+.pytest_cache/
+.ruff_cache/
 
 # Claude and Cursor files
 .claude/
