--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,27 @@ on:
 
 jobs:
   # =================================================================================================
+  # QUICK TESTS - Run on all PRs (no build required, ~5 seconds)
+  # =================================================================================================
+  quick-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install Test Dependencies
+        run: pip install -r tests/requirements.txt
+
+      - name: Run Quick Tests
+        run: pytest tests/test_quick.py -v --tb=short
+
+  # =================================================================================================
   # TRANSLATION JOB (Commented out as requested)
   # =================================================================================================
   # translate:
@@ -32,6 +53,7 @@ jobs:
   # BUILD JOB
   # =================================================================================================
   build:
+    needs: quick-tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -83,34 +105,36 @@ jobs:
           retention-days: 1
 
   # =================================================================================================
-  # TEST JOB (Temporarily disabled - needs fixes)
+  # FULL TESTS - Run on main branch only (after build, validates HTML output)
   # =================================================================================================
-  # test:
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #       with:
-  #         submodules: recursive
+  full-tests:
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
 
-  #     - name: Setup Python
-  #       uses: actions/setup-python@v5
-  #       with:
-  #         python-version: '3.11'
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
 
-  #     - name: Setup Hugo
-  #       uses: peaceiris/actions-hugo@v3
-  #       with:
-  #         hugo-version: '0.147.8'
-  #         extended: true
+      - name: Download Build Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: public-site
+          path: public
 
-  #     - name: Install Dependencies
-  #       run: |
-  #         pip install -r tests/requirements.txt
+      - name: Install Test Dependencies
+        run: pip install -r tests/requirements.txt
 
-  #     - name: Run Unit Tests
-  #       run: |
-  #         pytest tests/
+      - name: Run Full Test Suite
+        run: |
+          pytest tests/test_links.py tests/test_html_output.py tests/test_accessibility.py tests/test_build_performance.py -v --tb=short
+        env:
+          HUGO_BUILD_DIR: public
 
   # =================================================================================================
   # DEPLOYMENT JOBS
